--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
 
   calendar_timeline: ^1.1.2
 
+  firebase_core: ^2.17.0
+
+  cloud_firestore: ^4.9.3
+
+  provider: ^6.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
